[tool.poetry]
name = "ai-trade-helper"
version = "0.1.0"
description = "a tool to help traders use AI in making better trading decisions"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "^2.0.0"
pandas = "^2.0.0"
requests = "^2.30.0"
scipy = "^1.11.0"
websocket-client = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
